fix: change password only if it is entered